--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "apress-frontend_test_task",
   "version": "1.0.0",
   "description": "Тестовое задание для Абак-Пресс",
-  "main": "index.js",
+  "main": "./src/assets/index.js",
   "repository": "git@github.com:FrontEndJun/apress-frontend_test_task.git",
   "author": "Кондрев Г.А <george.kondrev@yandex.ru>",
   "license": "MIT",
